[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-rd-933/software-malaga/index.html
+++ b/test-rd-933/software-malaga/index.html
@@ -86,96 +86,98 @@ draft: false
 
 # H1: &quot;Software RD 933 y check-in en Málaga (compra directa)&quot;
 
-Si gestionas un alquiler vacacional en Málaga, sabes que el cumplimiento del RD 933 es crucial para evitar sanciones. La falta de herramientas adecuadas puede llevarte a complicaciones administrativas y multas inesperadas. **Nuestro software de check-in y cumplimiento RD 933 es la solución que necesitas**. Con él, podrás gestionar todas las obligaciones legales de forma sencilla y eficiente, asegurando que tu negocio esté siempre al día con la normativa.
+La gestión de alquileres vacacionales en Málaga puede convertirse en un verdadero desafío con las normativas locales, especialmente el cumplimiento del RD 933. La falta de herramientas adecuadas puede llevar a sanciones y complicaciones administrativas. Pero no te preocupes, tenemos la solución perfecta: nuestro software de check-in diseñado específicamente para facilitarte el cumplimiento normativo y mejorar la experiencia de tus huéspedes.
 
 ## Qué compras hoy
-Con tu adquisición, obtendrás:
-- **Envío de partes en lote**: Cumple con el RD 933 de manera rápida y eficaz.
-- **Cola offline**: Envía información incluso sin conexión a internet.
-- **Microsite de reservas**: Facilita la gestión de reservas y la comunicación con los huéspedes.
-- **Stripe split**: Automatiza el reparto de pagos entre propietarios y plataformas.
-- **Facturación automática**: Genera facturas sin esfuerzo.
-- **Calculadora de costes**: Evalúa tus gastos y beneficios de forma clara.
+
+- **Cumplimiento normativo RD 933 en lote**: Envía partes de manera eficiente y sin complicaciones.
+- **Cola offline**: Envía informes incluso sin conexión a internet, asegurando que nunca te quedes atrás.
+- **Microsite de reservas**: Mejora la visibilidad de tus propiedades con un microsite personalizado.
+- **Stripe split**: Facilita el reparto automático de ingresos entre propietarios y gestores.
+- **Facturación automática**: Simplifica el proceso administrativo con facturas generadas automáticamente.
+- **Calculadora de costes**: Conoce al instante los costos asociados a tu alquiler.
 
 ## Cómo resuelve el dolor
-El cumplimiento normativo del RD 933 en Málaga es fundamental para evitar problemas con la administración. Por ejemplo, el **Ayuntamiento de Málaga** requiere que todos los alojamientos turísticos presenten partes de entrada y salida de los huéspedes. Si no cumples con esto, te arriesgas a recibir sanciones. Además, situaciones como el **control de ocupación** y **registro de huéspedes** son exigencias que nuestro software gestiona eficazmente, permitiéndote concentrarte en lo que realmente importa: ofrecer un excelente servicio a tus visitantes.
+
+En Málaga, el cumplimiento del RD 933 es crucial para evitar sanciones. Por ejemplo, el Ayuntamiento de Málaga exige que los propietarios de viviendas turísticas informen sobre las estancias. No cumplir con estos requisitos puede resultar en multas significativas. Asimismo, la Junta de Andalucía realiza inspecciones regulares para verificar que se cumplan las normativas locales. Nuestro software facilita la presentación de partes de forma rápida y eficiente, minimizando el riesgo de sanciones.
 
 ## Mini-pruebas
-- **Panel de envíos RD 933**: Visualiza de manera clara y sencilla el estado de tus envíos, asegurando que todo esté en orden.
-- **Cola offline**: Si te quedas sin internet, el software guarda tus datos y los envía automáticamente cuando la conexión se restablece.
-- **Stripe split**: Visualiza cómo se distribuyen los pagos entre las partes involucradas, garantizando transparencia y confianza.
+
+- **Panel de envíos RD 933**: Visualiza un panel intuitivo donde podrás gestionar todos tus envíos de partes, asegurando que cumplas con la normativa sin complicaciones.
+  
+- **Cola offline**: Si no tienes internet, nuestro sistema se adaptará y almacenará tus datos localmente, permitiendo que los envíos se realicen en cuanto se restablezca la conexión.
+
+- **Stripe split**: Con nuestro esquema de reparto, podrás ver cómo se distribuyen automáticamente los ingresos, ahorrando tiempo y evitando errores en la gestión financiera.
 
 ## Preguntas frecuentes
-**¿Es legal el uso de este software para gestionar el RD 933?**  
-Sí, cumple con toda la normativa vigente en Málaga y Andalucía.
 
-**¿Qué sucede si no tengo conexión a internet?**  
-Nuestro software cuenta con una opción offline que permite seguir trabajando sin interrupciones.
+**1. ¿Es legal usar este software para gestionar alquileres vacacionales?**  
+Sí, nuestro software está diseñado específicamente para cumplir con las normativas vigentes, incluido el RD 933.
 
-**¿Qué tipo de soporte ofrecen?**  
-Ofrecemos soporte técnico 24/7 para resolver cualquier inquietud que puedas tener.
+**2. ¿Qué sucede si no tengo conexión a internet?**  
+No hay problema, nuestro software cuenta con opción de cola offline, permitiendo enviar partes una vez que se restablezca la conexión.
 
-**¿Cómo se realiza el pago?**  
-Puedes realizar tu compra de forma segura a través de Stripe, garantizando una transacción rápida y confiable.
+**3. ¿Ofrecen soporte técnico?**  
+Sí, ofrecemos soporte técnico a nuestros usuarios para resolver cualquier duda o inconveniente que pueda surgir.
+
+**4. ¿Cómo se realizan los pagos?**  
+Los pagos se procesan de forma segura a través de Stripe, garantizando la protección de tus datos.
 
 ## Información adicional
-Nuestro software no solo te ayuda a cumplir con la normativa, sino que también mejora la experiencia de tus huéspedes. Con un microsite de reservas, puedes gestionar tus alojamientos de manera más eficiente y ofrecer a tus clientes un acceso sencillo a toda la información que necesitan. Además, la facturación automática te ahorrará tiempo y esfuerzo, permitiéndote enfocarte en lo que realmente importa: brindar un excelente servicio a tus huéspedes.
 
-Nota breve: **Devolución 30 días si no te sirve**.
+Nuestro software no solo te ayudará a cumplir con la normativa, sino que también optimizará tus procesos de gestión. La automatización de tareas como la facturación y el envío de partes te permitirá concentrarte en lo que realmente importa: ofrecer una experiencia excepcional a tus huéspedes. Además, con la calculadora de costes podrás tener un mejor control sobre tus gastos y maximizar tus beneficios.
+
+**Devolución 30 días si no te sirve.** 
 
 ## Datos locales útiles
-En Málaga, es fundamental estar al tanto de las normativas del **Instituto Municipal de la Vivienda**, que regula el alquiler vacacional. Además, el **Servicio de Inspección de Consumo** del Ayuntamiento realiza controles periódicos, por lo que estar preparado es clave para evitar problemas.
+
+En Málaga, puedes consultar la **Delegación Territorial de Turismo**, que proporciona información sobre las normativas para alojamientos turísticos. También es recomendable revisar los horarios de atención al público de la **Oficina de Atención al Ciudadano** para resolver cualquier duda sobre trámites locales.
 
 &lt;schema&gt;
 {
   &quot;@context&quot;: &quot;https://schema.org&quot;,
   &quot;@type&quot;: &quot;Organization&quot;,
   &quot;name&quot;: &quot;Software RD 933&quot;,
-  &quot;url&quot;: &quot;https://tu-sitio-web.com&quot;,
-  &quot;address&quot;: {
-    &quot;@type&quot;: &quot;PostalAddress&quot;,
-    &quot;addressLocality&quot;: &quot;Málaga&quot;,
-    &quot;addressRegion&quot;: &quot;Andalucía&quot;
-  },
+  &quot;url&quot;: &quot;https://tusitio.com/rd-933/software-Málaga&quot;,
+  &quot;logo&quot;: &quot;https://tusitio.com/logo.png&quot;,
+  &quot;sameAs&quot;: [
+    &quot;https://www.facebook.com/tusitio&quot;,
+    &quot;https://www.twitter.com/tusitio&quot;
+  ],
   &quot;contactPoint&quot;: {
     &quot;@type&quot;: &quot;ContactPoint&quot;,
-    &quot;telephone&quot;: &quot;+34-123-456-789&quot;,
-    &quot;contactType&quot;: &quot;Customer Service&quot;
-  },
-  &quot;sameAs&quot;: [
-    &quot;https://www.facebook.com/tu-pagina&quot;,
-    &quot;https://www.twitter.com/tu-perfil&quot;
-  ]
-}
-
-{
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;Product&quot;,
-  &quot;name&quot;: &quot;Software de Check-in RD 933&quot;,
-  &quot;description&quot;: &quot;Software para la gestión de check-in y cumplimiento del RD 933 para alquiler vacacional en Málaga.&quot;,
-  &quot;offers&quot;: {
-    &quot;@type&quot;: &quot;Offer&quot;,
-    &quot;price&quot;: &quot;14.99&quot;,
-    &quot;priceCurrency&quot;: &quot;EUR&quot;,
-    &quot;itemCondition&quot;: &quot;https://schema.org/NewCondition&quot;,
-    &quot;availability&quot;: &quot;https://schema.org/InStock&quot;
+    &quot;telephone&quot;: &quot;+34 123 456 789&quot;,
+    &quot;contactType&quot;: &quot;Customer Service&quot;,
+    &quot;areaServed&quot;: &quot;ES&quot;,
+    &quot;availableLanguage&quot;: &quot;Spanish&quot;
   }
 }
 
 {
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;SoftwareApplication&quot;,
-  &quot;name&quot;: &quot;Software RD 933&quot;,
-  &quot;operatingSystem&quot;: &quot;Web&quot;,
-  &quot;applicationCategory&quot;: &quot;BusinessApplication&quot;,
+  &quot;@type&quot;: &quot;Product&quot;,
+  &quot;name&quot;: &quot;Software de Check-in y Cumplimiento RD 933&quot;,
+  &quot;description&quot;: &quot;Software diseñado para facilitar la gestión de alquileres vacacionales en Málaga, asegurando el cumplimiento normativo.&quot;,
   &quot;offers&quot;: {
     &quot;@type&quot;: &quot;Offer&quot;,
-    &quot;price&quot;: &quot;14.99&quot;,
     &quot;priceCurrency&quot;: &quot;EUR&quot;,
-    &quot;itemCondition&quot;: &quot;https://schema.org/NewCondition&quot;,
+    &quot;price&quot;: &quot;14.99&quot;,
     &quot;availability&quot;: &quot;https://schema.org/InStock&quot;
   },
   &quot;areaServed&quot;: &quot;Andalucía/Málaga&quot;
+}
+
+{
+  &quot;@type&quot;: &quot;SoftwareApplication&quot;,
+  &quot;name&quot;: &quot;Software RD 933&quot;,
+  &quot;operatingSystem&quot;: &quot;All&quot;,
+  &quot;applicationCategory&quot;: &quot;BusinessApplication&quot;,
+  &quot;offers&quot;: {
+    &quot;@type&quot;: &quot;Offer&quot;,
+    &quot;priceCurrency&quot;: &quot;EUR&quot;,
+    &quot;price&quot;: &quot;14.99&quot;,
+    &quot;itemCondition&quot;: &quot;https://schema.org/NewCondition&quot;,
+    &quot;availability&quot;: &quot;https://schema.org/InStock&quot;
+  }
 }
 &lt;/schema&gt;
 </code></pre>
