Landing: secciÃ³n de microsite y pagos directos

--- a/index.html
+++ b/index.html
@@ -804,6 +804,78 @@
       </div>
     </section>
 
+    <!-- Microsite y pagos directos -->
+    <section id="microsite" class="section container" aria-labelledby="microsite-title">
+      <div style="background: linear-gradient(135deg, rgba(37,99,235,0.12) 0%, rgba(16,185,129,0.12) 100%); border: 2px solid rgba(37,99,235,0.18); border-radius: 24px; padding: clamp(24px, 4vw, 40px); margin: 20px 0; display: grid; gap: 28px; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); align-items: center;">
+        <div>
+          <h2 id="microsite-title" style="margin: 0 0 16px; font-size: clamp(28px, 4vw, 40px); color: #1d4ed8;">Microsite propio para reservas directas</h2>
+          <p style="margin: 0 0 20px; font-size: 17px; line-height: 1.6; color: #475569; max-width: 560px;">
+            Crea en minutos una página pública para tu alojamiento, comparte el enlace en redes o con tus huéspedes y recibe reservas directas sin depender de Booking o Airbnb. 
+            Con nuestro sistema de <strong style="color:#0f172a;">pago directo</strong> las comisiones se reducen a la mitad y el dinero entra en tu cuenta bancaria sin esperas.
+          </p>
+
+          <div style="display: grid; gap: 14px;">
+            <div style="display:flex; gap:10px; align-items:flex-start;">
+              <span style="font-size:18px;">✨</span>
+              <div>
+                <strong style="color:#0f172a;">Microsite con tu marca</strong>
+                <p style="margin:4px 0 0; color:#64748b;">Personaliza portada, fotos, descripción y condiciones para compartir tu alojamiento con un enlace único.</p>
+              </div>
+            </div>
+            <div style="display:flex; gap:10px; align-items:flex-start;">
+              <span style="font-size:18px;">💳</span>
+              <div>
+                <strong style="color:#0f172a;">Pagos directos con comisiones mínimas</strong>
+                <p style="margin:4px 0 0; color:#64748b;">Integra el cobro seguro con Stripe y ahorra hasta un 50% de comisiones frente a las OTAs tradicionales.</p>
+              </div>
+            </div>
+            <div style="display:flex; gap:10px; align-items:flex-start;">
+              <span style="font-size:18px;">🔗</span>
+              <div>
+                <strong style="color:#0f172a;">Enlaces de cobro a medida</strong>
+                <p style="margin:4px 0 0; color:#64748b;">Define fechas, importe acordado y envía el enlace al huésped para que complete el pago desde cualquier dispositivo.</p>
+              </div>
+            </div>
+          </div>
+
+          <div style="display:flex; flex-wrap:wrap; gap:12px; margin-top:24px;">
+            <a href="#precio" class="btn primary" style="text-decoration:none;">Quiero mi microsite</a>
+            <a href="#caracteristicas" class="btn" style="text-decoration:none;">Ver más funciones</a>
+          </div>
+        </div>
+
+        <div style="background:#ffffff; border-radius:18px; border:1px solid rgba(37,99,235,0.18); padding:24px; box-shadow: 0 18px 40px rgba(37,99,235,0.12);">
+          <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:18px;">
+            <div>
+              <p style="margin:0; font-size:14px; color:#64748b;">Microsite · Vista previa</p>
+              <h3 style="margin:4px 0 0; font-size:20px; color:#0f172a;">delfincheckin.com/tucasa</h3>
+            </div>
+            <span style="font-size:26px;">🏡</span>
+          </div>
+          <div style="border-radius:12px; overflow:hidden; border:1px solid rgba(15,23,42,0.08);">
+            <div style="background:linear-gradient(135deg, #2563eb, #1d4ed8); color:white; padding:18px;">
+              <h4 style="margin:0 0 6px; font-size:18px;">Apartamento Centro Málaga</h4>
+              <p style="margin:0; font-size:14px; opacity:0.9;">3 huéspedes · 2 noches · 280 €</p>
+            </div>
+            <div style="padding:18px; background:white; color:#0f172a; display:grid; gap:12px;">
+              <div style="display:flex; align-items:center; gap:8px;">
+                <span style="color:#2563eb;">📆</span>
+                <span style="font-size:14px; color:#475569;">Check‑in 12 mayo · Check‑out 14 mayo</span>
+              </div>
+              <div style="display:flex; align-items:center; gap:8px;">
+                <span style="color:#2563eb;">🔒</span>
+                <span style="font-size:14px; color:#475569;">Pago seguro con tarjeta · Confirmación instantánea</span>
+              </div>
+              <button style="margin-top:6px; background:linear-gradient(135deg, #16a34a, #22c55e); color:white; border:none; border-radius:10px; padding:12px; font-weight:700; cursor:pointer;">Reservar y pagar ahora</button>
+            </div>
+          </div>
+          <p style="margin:18px 0 0; color:#64748b; font-size:13px;">
+            Envía este microsite a tu huésped, recibe la reserva y el pago directo sin dependencias externas.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- Vista previa tipo admin/dashboard -->
     <section id="dashboard" class="section container" aria-labelledby="dashboard-title">
       <h2 id="dashboard-title" data-es="Vista previa del Dashboard" data-en="Dashboard Preview">Vista previa del Dashboard</h2>
