--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
 
     <section id="caracteristicas" class="section container">
       <h2 data-es="Todo lo que necesitas para el día a día" data-en="Everything you need for daily operations">Todo lo que necesitas para el día a día</h2>
-      <p class="lead" data-es="Simplifica tareas repetitivas y mejora la experiencia del huésped. <strong>Importante:</strong> Las reservas se crean manualmente desde la página web de Delfín Check-in, no hay conexión automática con Booking, Airbnb u otros portales." data-en="Simplify repetitive tasks and improve guest experience. <strong>Important:</strong> Reservations are created manually from the Delfín Check-in website, there is no automatic connection with Booking, Airbnb or other portals.">Simplifica tareas repetitivas y mejora la experiencia del huésped. <strong>Importante:</strong> Las reservas se crean manualmente desde la página web de Delfín Check-in, no hay conexión automática con Booking, Airbnb u otros portales.</p>
+      <p class="lead" data-es="Simplifica tareas repetitivas y mejora la experiencia del huésped. Crea reservas manualmente desde Delfín Check-in o contrata el <strong>Plan Pro</strong> para sincronizarte con Booking, Airbnb, Expedia y otras OTAs." data-en="Simplify repetitive tasks and improve guest experience. Create reservations manually from Delfín Check-in or upgrade to the <strong>Pro Plan</strong> to sync with Booking, Airbnb, Expedia and other OTAs.">Simplifica tareas repetitivas y mejora la experiencia del huésped. Crea reservas manualmente desde Delfín Check-in o contrata el <strong>Plan Pro</strong> para sincronizarte con Booking, Airbnb, Expedia y otras OTAs.</p>
       <div class="features-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin: 30px 0;">
         <style>
           .feature-card:hover {
@@ -1118,9 +1118,9 @@
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #3b82f6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #3b82f6; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">1</div>
-            <h3 style="margin: 0; color: #1e40af; font-size: 18px;">Gestión manual de reservas</h3>
+            <h3 style="margin: 0; color: #1e40af; font-size: 18px;">Gestión de reservas</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Crear nuevas reservas desde "Nueva reserva" en el panel web</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Crea reservas manuales desde el panel web o activa el <strong>Plan Pro</strong> para conectarte con Booking, Airbnb, Expedia y cualquier OTA donde esté tu alojamiento.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #10b981; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
@@ -1142,17 +1142,17 @@
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #8b5cf6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #8b5cf6; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">4</div>
-            <h3 style="margin: 0; color: #7c3aed; font-size: 18px;">Sincronización móvil</h3>
+            <h3 style="margin: 0; color: #7c3aed; font-size: 18px;">App móvil Android &amp; iPhone</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Las reservas del dashboard se sincronizan con el calendario de tu móvil</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Consulta reservas, check-ins y avisos desde la aplicación nativa para iOS y Android. Recibe notificaciones push y actualiza estados en tiempo real.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #ef4444; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
           <div style="display: flex; align-items: center; margin-bottom: 12px;">
             <div style="background: #ef4444; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">5</div>
-            <h3 style="margin: 0; color: #dc2626; font-size: 18px;">Registro de viajeros</h3>
+            <h3 style="margin: 0; color: #dc2626; font-size: 18px;">Generador de facturas</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Generación automática de fichas para el Ministerio del Interior</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Crea facturas para tus huéspedes cuando lo necesiten. Solo completa sus datos y el sistema genera el PDF con tus datos fiscales automáticamente.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #06b6d4; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
