Landing: secciÃ³n app mÃ³vil para propietarios

--- a/index.html
+++ b/index.html
@@ -923,6 +923,73 @@
       </div>
     </section>
 
+    <!-- Aplicación móvil para propietarios -->
+    <section id="app-propietarios" class="section container" aria-labelledby="app-title">
+      <div style="background: linear-gradient(135deg, rgba(124,58,237,0.08), rgba(14,116,144,0.08)); border-radius: 24px; padding: clamp(24px, 4vw, 40px); border: 1px solid rgba(15,23,42,0.08); box-shadow: 0 20px 45px rgba(79,70,229,0.12); display: grid; gap: 28px; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); align-items: center;">
+        <div style="display:flex; flex-direction:column; gap:14px;">
+          <span style="background: rgba(124,58,237,0.1); color: #5b21b6; font-weight: 700; font-size: 14px; padding: 6px 14px; border-radius: 999px; width: fit-content;">Aplicación móvil incluida</span>
+          <h2 id="app-title" style="margin:0; font-size: clamp(28px, 4vw, 38px); color:#312e81;">Controla tu alojamiento desde el bolsillo</h2>
+          <p style="margin:0; font-size:18px; color:#475569; line-height:1.6; max-width:640px;">
+            Delfín Check-in incluye acceso a la app para propietarios en <strong>App Store</strong> y <strong>Google Play</strong>. Recibe alertas de check-in, consulta reservas, marca habitaciones como listas y atiende incidencias sin abrir el portátil.
+          </p>
+
+          <ul style="margin:0; padding:0; list-style:none; display:grid; gap:12px;">
+            <li style="display:flex; gap:10px; align-items:flex-start; color:#475569;">
+              <span style="font-size:18px; color:#7c3aed;">📲</span>
+              <span>Notificaciones push inmediatas cuando se crea o modifica una reserva.</span>
+            </li>
+            <li style="display:flex; gap:10px; align-items:flex-start; color:#475569;">
+              <span style="font-size:18px; color:#7c3aed;">🧾</span>
+              <span>Listado completo de huéspedes, check-ins y documentos desde el móvil.</span>
+            </li>
+            <li style="display:flex; gap:10px; align-items:flex-start; color:#475569;">
+              <span style="font-size:18px; color:#7c3aed;">🔐</span>
+              <span>Acceso seguro con el mismo usuario y contraseña de tu panel web.</span>
+            </li>
+          </ul>
+
+          <div style="display:flex; flex-wrap:wrap; gap:12px; margin-top:18px;">
+            <a href="#precio" class="btn primary" style="text-decoration:none; display:inline-flex; align-items:center; gap:10px;">
+              <span>📥</span>
+              <span>Disponible en iOS y Android</span>
+            </a>
+            <a href="#instrucciones" class="btn" style="text-decoration:none;">Ver cómo funciona</a>
+          </div>
+        </div>
+
+        <div style="position:relative; background:white; border-radius:20px; border:1px solid rgba(79,70,229,0.18); padding:24px; box-shadow: 0 24px 60px rgba(79,70,229,0.18);">
+          <div style="position:absolute; inset:12px; border-radius:18px; background:linear-gradient(135deg, rgba(124,58,237,0.12), rgba(14,165,233,0.12)); filter:blur(20px);"></div>
+          <div style="position:relative; z-index:1; display:grid; gap:16px;">
+            <div style="display:flex; align-items:center; justify-content:space-between;">
+              <div>
+                <p style="margin:0; font-size:14px; color:#475569;">App Delfín Check-in</p>
+                <h3 style="margin:4px 0 0; font-size:20px; color:#312e81;">Panel del propietario</h3>
+              </div>
+              <span style="font-size:26px; color:#7c3aed;">📱</span>
+            </div>
+            <div style="display:grid; gap:10px; background:#f8fafc; border-radius:14px; padding:18px; border:1px solid rgba(148,163,184,0.2);">
+              <div style="display:flex; justify-content:space-between; align-items:center; font-weight:600; color:#1e293b;">
+                <span>Check-in hoy</span>
+                <span>17:30 · Suite 203</span>
+              </div>
+              <div style="display:flex; justify-content:space-between; align-items:center; color:#475569; font-size:14px;">
+                <span>🧳 Huespedes</span>
+                <span>3 adultos · 2 noches</span>
+              </div>
+              <div style="display:flex; justify-content:space-between; align-items:center; color:#16a34a; font-weight:600;">
+                <span>Estado</span>
+                <span>✔ Documentación completada</span>
+              </div>
+            </div>
+            <div style="display:grid; gap:8px;">
+              <button style="padding:12px; border:none; border-radius:12px; background:linear-gradient(135deg, #7c3aed, #6366f1); color:white; font-weight:700; cursor:pointer;">Ver calendario</button>
+              <button style="padding:12px; border:1px solid rgba(79,70,229,0.2); border-radius:12px; background:white; color:#4338ca; font-weight:600; cursor:pointer;">Enviar mensaje al huésped</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Vista previa tipo admin/dashboard -->
     <section id="dashboard" class="section container" aria-labelledby="dashboard-title">
       <h2 id="dashboard-title" data-es="Vista previa del Dashboard" data-en="Dashboard Preview">Vista previa del Dashboard</h2>
