--- a/terminos-servicio.html
+++ b/terminos-servicio.html
@@ -14,7 +14,7 @@
             font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif; 
             line-height: 1.7; 
             color: #1e293b; 
-            background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+            background: #eef6ff;
             min-height: 100vh;
         }
         .container { max-width: 900px; margin: 0 auto; padding: 0 20px 40px; }
